# python-scripts-api

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
examples/: README.md  swagger_demo.py
examples/scripts/: args_env.py  fail.py  hello.py  long_task.py  spawn_child.py
src/python_script_api/: __init__.py  app.py  cli.py  config.py  dotenv.py  registry.py  runner.py
src/quant_script_api/: __init__.py  __main__.py  app.py  auth.py  config.py  jwt.py  runner.py
