[project]
name = "quant-script-api"
version = "0.1.0"
description = "FastAPI-based control plane to manage and run Python scripts via REST APIs."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "uvicorn>=0.30",
]

[project.scripts]
quant-script-api = "quant_script_api.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
